--- a/config/params.yaml
+++ b/config/params.yaml
@@ -1,18 +1,19 @@
 globalmap_server_node:
   ros__parameters:
     globalmap_pcd: ""
-    convert_utm_to_local: True
-    downsample_resolution: 0.1
+    convert_utm_to_local: False
+    downsample_resolution: 0.5
 
 hdl_localization_node:
   ros__parameters:
     odom_child_frame_id: "base_link"
     robot_odom_frame_id: "odom"
     use_imu: True
+    send_tf_transforms: True
     invert_acc: False
     invert_gyro: False
     cool_time_duration: 2.0
-    enable_robot_odometry_prediction: False
+    enable_robot_odometry_prediction: True
     # Registration Method Setting
     # available reg_methods: NDT_OMP, NDT_CUDA_P2D, NDT_CUDA_D2D
     reg_method: "NDT_OMP"
