--- a/config/params.yaml
+++ b/config/params.yaml
@@ -2,28 +2,29 @@ globalmap_server_node:
   ros__parameters:
     globalmap_pcd: ""
     convert_utm_to_local: False
-    downsample_resolution: 0.1
+    downsample_resolution: 0.5
 
 hdl_localization_node:
   ros__parameters:
-    odom_child_frame_id: "base_link"
+    odom_child_frame_id: "velodyne"
     robot_odom_frame_id: "odom"
     use_imu: True
     send_tf_transforms: True
     invert_acc: False
     invert_gyro: False
     cool_time_duration: 2.0
-    enable_robot_odometry_prediction: True
+    enable_robot_odometry_prediction: False
+    use_global_localization: True
     # Registration Method Setting
-    # available reg_methods: NDT_OMP, NDT_CUDA_P2D, NDT_CUDA_D2D
-    reg_method: "NDT_CUDA_P2D"
+    # available reg_methods: NDT_OMP, NDT_CUDA_P2D, NDT_CUDA_D2D, GICP, VGICP
+    reg_method: "NDT_OMP"
     # Nearest Search Method
     # if the reg_method is NDT_OMP, available ndt_neighbor_search_method: DIRECT1/7/21, KDTREE
     # otherwise, ndt_neighbor_search_method: DIRECT1/7/27, DIRECT_RADIUS
     ndt_neighbor_search_method: "DIRECT7"
     ndt_neighbor_search_radius: 2.0
     ndt_resolution: 1.0
-    downsample_resolution: 1.0
+    downsample_resolution: 0.1
     # if "specify_init_pose" is true, pose estimator will be initialized with the following params
     # otherwise, you need to input an initial pose with "2D Pose Estimate" on rviz"
     specify_init_pose: True
@@ -35,4 +36,4 @@ hdl_localization_node:
     init_ori_y: 0.0
     init_ori_z: 0.0
 
-    use_sim_time: False
+    use_sim_time: True
